[workspace]
resolver = "2"
members = [
    "leetcode/two-sum/rust",
    "leetcode/add-two-numbers/rust",
    "leetcode/longest-substring-without-repeating-characters/rust",
    "leetcode/longest-palindromic-substring/rust",
    "leetcode/zigzag-conversion/rust",
    "leetcode/reverse-integer/rust",
    "leetcode/string-to-integer-(atoi)/rust",
    "leetcode/palindrome-number/rust",
    "leetcode/earliest-finish-time-for-land-and-water-rides-i/rust",
    "leetcode/total-waviness-of-numbers-in-range-i/rust",
    "leetcode/total-waviness-of-numbers-in-range-ii/rust",
    "leetcode/create-binary-tree-from-descriptions/rust",
    "leetcode/left-and-right-sum-differences/rust",
    "leetcode/partition-array-according-to-given-pivot/rust",
    "leetcode/maximum-total-subarray-value-i/rust",
    "leetcode/maximum-total-subarray-value-ii/rust",
    "leetcode/number-of-ways-to-assign-edge-weights-i/rust",
    "leetcode/number-of-ways-to-assign-edge-weights-ii/rust",
    "leetcode/weighted-word-mapping/rust",
    "leetcode/maximum-twin-sum-of-a-linked-list/rust",
    "leetcode/delete-the-middle-node-of-a-linked-list/rust",
    "leetcode/process-string-with-special-operations-i/rust",
    "leetcode/process-string-with-special-operations-ii/rust",
    "leetcode/angle-between-hands-of-a-clock/rust",
    "data-structures/stack/rust",
    "data-structures/queue/rust",
]

# Future LeetCode problems can be added here as workspace members
# Example:
# "leetcode/three-sum/rust",
# "leetcode/valid-parentheses/rust",
# etc.

[workspace.package]
version = "0.1.0"
edition = "2021" 
